fix(about): overlapping header box

--- a/frontend/src/components/Nav/about.css
+++ b/frontend/src/components/Nav/about.css
@@ -2,11 +2,9 @@
     max-width: 800px;
     background-color: #f4f4f4;
     margin: 0 auto;
-    height: 200vh;
  }
 
 .about-container h1 {
-    margin-top: -20px;
     background-color: #0066cc;
     color: white;
     text-align: center;
